# PersonalWebsiteProject

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/: blog.css  home.css
blog/static/blog/css/: blog.css  contacts.css  home.css  post_detail.css
blog/templates/: blog.html  home.html
blog/templates/blog/: blog.html  contacts_page.html  home.html  single-post.html
core/: settings.py  urls.py
projects/: admin.py  models.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_project_desctiption_remove_project_status_and_more.py
projects/static/projects/: projects_list.css
projects/templates/projects/: projects.html
static/: base.css
templates/: base.html
