[project]
name = "mypersonalwebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==5.1.7",
    "django-markdownx==4.0.7",
    "markdown==3.7",
    "psycopg==3.3.4",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
]
