[project]
name = "mypersonalwebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.1.7",
    "django-admin-sortable2>=2.3.1",
    "pillow>=12.2.0",
    "psycopg==3.3.4",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
]
